# ExpressWaybillOCR

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/preprocess/: CMakeLists.txt  preprocess.cpp  preprocess.h
test/: test.cpp
